--- a/src/yh_resume_cht.tex
+++ b/src/yh_resume_cht.tex
@@ -218,8 +218,8 @@
   {物聯網整合開發人才就業班}{Jan. 2021 -- May. 2021}
   {工業技術研究院 產業學院}{}
   \resumeItemListStart
-    \resumeItem{Completed an intensive hands-on training program covering \textbf{web development fundamentals, system programming, Linux environments, networking basics, and IoT system integration}.}
-    \resumeSubItem{Building an \textbf{IoT monitoring system (IndoorAirBox)} using \textbf{Raspberry Pi and ESP8266}, focusing on temperature and humidity data collection with available course resources.}
+    \resumeItem{完成一項密集的\textbf{實作導向培訓課程}，內容涵蓋\textbf{網頁開發基礎、系統程式設計、Linux 環境、網路基礎，以及 IoT 系統整合。}}
+    \resumeItem{使用\textbf{Raspberry Pi}與\textbf{ESP8266}建置一套\textbf{IoT 監控系統（IndoorAirBox）}，專注於溫度與濕度資料蒐集，並結合課程所提供之資源完成實作。}
   \resumeItemListEnd
 
   \resumeSubHeadingListEnd  
